# voidlink

./: .dockerignore  .env.compose  compose.yml  justfile  pyproject.toml
.github/workflows/: docker-prod-ghcr.yml
apps/alliance/: models.py  operations.py  tasks.py
apps/alliance/migrations/: 0001_initial.py
apps/corporation/: models.py  tasks.py
apps/esi/: app_settings.py  client.py  helpers.py  models.py  views.py
apps/sde/management/commands/: sde.py
apps/server_status/: tasks.py
apps/server_status/migrations/: 0003_alter_serverstatus_vip_mode.py
apps/users/: views.py
apps/wars/: operations.py  tasks.py
config/: celery_app.py
config/settings/components/: app_settings.py  cache.py  celery.py
docker/: entrypoint.sh
docker/local/: Dockerfile  start-app.sh  start-beat.sh  start-flower.sh  start-worker.sh
docker/prod/: Dockerfile  start-app.sh  start-beat.sh  start-flower.sh  start-worker.sh
